<resources xmlns:xliff = "urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="action_settings">Settings</string>


    <!-- Header text for the list of toppings [CHAR LIMIT=20] -->
    <string name="toppings">Toppings</string>
    <string name="thank_you">Thank you!</string>
    <string name="order_summary_name">Name: <xliff:g id="name" example = "Amy">%s</xliff:g></string>
    <string name="order_summary_cream">Add whipped cream?</string>
    <string name="order_summary_chocolate">Add chocolate?</string>
    <string name="order_summary_quantity">Quantity: </string>
    <string name="order_summary_total">Total: </string>
    <string name="name">Name </string>
    <string name="cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="ordersummary">Order Summary</string>
    <string name="order">Order</string>
</resources>
